# Diffusion3D

./: .gitignore  CMakeLists.txt  README.md
app/: benchmark1.cc  main.cc
case/cavity/: bc.cc  ic.cc
case/pipe/: bc.cc
inc/: basic.h  bc.h  diagnose.h  element.h  error.h  geom.h  gradient.h  green-gauss.h  ic.h  io.h  lsq.h  misc.h  noc.h  property.h  spatial.h  temporal.h
src/: diagnose.cc  geom.cc  gradient.cc  green-gauss.cc  io.cc  lsq.cc  main.cc  misc.cc  noc.cc  property.cc  spatial.cc  temporal.cc
